Revert "Use raw <compilerArgs> to enable preview features"
This reverts commit eb36ef81aee4b5ce1fa51caeeea880f2c987298f.